[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mlpilot"
version = "0.1.0"
description = "An ML library that guides beginners step by step"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scikit-learn",
    "matplotlib",
    "pandas",
]